# logsday

./: .gitignore  Cargo.toml  LICENSE  README.md  sqlite.db
public/: style.css
res/: favicon.xcf
src/: db.rs  filestuff.rs  main.rs  newlog.rs  password.rs  slug.rs  week.rs
static/: scripts.js  style.css
templates/: account.html  base.html  credits.html  debug.html  editlog.html  editproject.html  landing.html  login.html  mdguide.html  newlog.html  newproject.html  projectlist.html  signup.html  viewlog.html  viewproject.html  viewuser.html
templates/bits/: comment_list.html  likes.html  login.html  login_form.html  loglist.html  nav_user.html  project_list.html
templates/page/: base.html  conman.html  dashboard.html  landing.html  login.html  my_project.html  newproject.html  signup.html  testing.html
templates/prototype/: base.html
