[package]
name = "logsday"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.13.1"
axum = { version = "0.8.9", features = ["multipart"] }
axum_typed_multipart = "0.16.5"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.10", features = ["fs"] }
tower-sessions = "0.15.0"
