[package]
name = "logsday"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.13.1"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum_typed_multipart = "0.16.5"
image = { version = "0.25.10", features = ["webp"] }
infer = "0.19.0"
pulldown-cmark = "0.13.4"
scraper = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.15.1"
tower-http = { version = "0.6.10", features = ["fs", "normalize-path"] }
tower-layer = "0.3.3"
tower-sessions = "0.15.0"
tower_governor = "0.8.0"
webp-animation = { version = "0.10.0", features = ["image"] }
